--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="kayo-info-detail">
                                 <h3>HELLO,</h3>
                                 <p>
-                                    I’m Bhargav Patel. My friend (Kruti) designed this site so you can get to know me on a level. With a passion for technology and the mindset to see problems as opportunities, I have the skills required to solve real-world problems by diving deep into them and solving their root cause. Tech Curiosity sets me up-to-date for the industry as well as research and encourages me to understand various topics which make my vision broader. 
+                                    I’m Bhargav Patel. With a passion for technology and the mindset to see problems as opportunities, I have the skills required to solve real-world problems by diving deep into them and solving their root cause. Tech Curiosity sets me up-to-date for the industry as well as research and encourages me to understand various topics which make my vision broader. 
                                     As a believer in teamwork and my technical skills, I envision an exciting future in the industry.
                                 </p>
                             </div>
